--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   dio: ^4.0.0
   cached_network_image: ^3.0.0
   like_button: ^2.0.2
+  flutter_displaymode: 0.3.1-nullsafety.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
