--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cached_network_image: ^3.0.0
   like_button: ^2.0.2
   focused_menu: ^1.0.5
+  share: ^2.0.4
+  image_picker: ^0.8.0+3
 
 
   # The following adds the Cupertino Icons font to your application.
